--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -4,75 +4,13 @@
 {% block content %}
 
 <div>
-    <div class="superholder">
-    	<div class="cardholder" style="display: none;">
-    		<div class="card">
-    			<div class="pic" id="pic1">
-    			</div>
-    			<div class="message" id="msg1">
-    			</div>
-    			<div class="footer">
-    				<div class="site">
-    				</div>
-    				<div class="date">
-    				</div>
-    			</div>
-    		</div>
-
-    		<div class="card">
-          <div class="pic" id="pic2">
-    			</div>
-    			<div class="message" id="msg2">
-    			</div>
-          <div class="footer">
-    				<div class="site">
-    				</div>
-    				<div class="date">
-    				</div>
-    			</div>
-    		</div>
-
-    		<div class="card">
-          <div class="pic" id="pic3">
-    			</div>
-    			<div class="message" id="msg3">
-    			</div>
-          <div class="footer">
-    				<div class="site">
-    				</div>
-    				<div class="date">
-    				</div>
-    			</div>
-    		</div>
-
-    		<div class="card">
-          <div class="pic" id="pic4">
-    			</div>
-    			<div class="message" id="msg4">
-    			</div>
-          <div class="footer">
-    				<div class="site">
-    				</div>
-    				<div class="date">
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </div>
-
-  	<div class="blackbar">
-  		<div class="butt" onclick="listen()">
-        <img src="static/mic.svg" height="36px">
-  		</div>
-  	</div>
-
-  	<div class="owllisten">
-  	</div>
+    <h1>Hello! I'm SkyNest! Try me out!</h1>
+    Enter Tweet or Sentence: <input type="text" name="tweet"><br>
+    <button type="button">Get Intelligent Reply</button> 
+    Suggested Reply: <input type="text" name="reply">
+</div>
 
   <script type="text/javascript">
-  // hsp stuff
-  hsp.init({});
-
   // JQuery stuff
   $(document).ready(function(){
 
