--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -4,10 +4,10 @@
 {% block content %}
 
 <div>
-    <h1>Hello! I'm SkyNest! Try me out!</h1>
-    Enter Tweet or Sentence: <input type="text" name="tweet"><br>
-    <button type="button">Get Intelligent Reply</button> 
-    Suggested Reply: <input type="text" name="reply">
+    <h2>Hola, I'm SkyNest. Try me out!</h2>
+    Enter Tweet or Sentence: <input type="text" name="tweet" size="140"><br>
+    <button type="button">Get Intelligent Reply</button><br>
+    Suggested Reply: <input type="text" name="reply" size="140">
 </div>
 
   <script type="text/javascript">
