--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -5,192 +5,17 @@
 
 <div>
     <h2>Hola, I'm SkyNest. Try me out!</h2>
-    Enter Tweet or Sentence: <input type="text" name="tweet" size="140"><br>
-    <button type="button">Get Intelligent Reply</button><br>
-    Suggested Reply: <input type="text" name="reply" size="140">
+    Enter Tweet or Sentence: <input type="text" id="tweet" size="140"><br>
+    <button type="button" id="suggest">Get Intelligent Reply</button><br><br>
+    Suggested Reply: <input type="text" id="reply" size="140">
 </div>
 
   <script type="text/javascript">
   // JQuery stuff
   $(document).ready(function(){
-
-      $(".card").click(function(){
-          nextCard();
+      $("#suggest").click(function(){
+          alert('suggesting');
       });
-
-      $(".send").click(function(){
-          $(".card").stop(true, false).animate({ top: "-=400px", opacity: "0"} );
-          $(".superholder").addClass("supersuccess");
-      });
-
-
-      $(".butt").click(function(){
-          $(".owllisten").addClass("popup");
-          $("body").addClass("dark");
-      });
-
-      $(".owllisten").click(function(){
-          $(".owllisten").removeClass("popup");
-          $("body").removeClass("dark");
-      });
-
-
-
   });
-
-  // set up main vars
-  var recognition, voiceMessage, cards = [], currentCardIndex = 1;
-
-  // set up speech recognition
-  if (!('webkitSpeechRecognition' in window)) {
-    console.log('NO SUPPORT FOR SPEECH RECOGNITION!');
-  } else {
-    recognition = new webkitSpeechRecognition();
-    recognition.continuous = true;
-    recognition.interimResults = false;
-
-    recognition.onstart = function() {
-      console.log('started recognition');
-    }
-    recognition.onresult = function(event) {
-      console.log('speech has been captured');
-      console.log(event);
-      var final_transcript = '';
-
-      for (var i = event.resultIndex; i < event.results.length; ++i) {
-        if (event.results[i].isFinal) {
-          final_transcript += event.results[i][0].transcript;
-        }
-      }
-      console.log(final_transcript);
-      recognition.stop();
-      if (final_transcript.indexOf('content') > -1) {
-        speak('OK. I will find some content for you');
-        sleep(1200);
-        var topic = '';
-        if (final_transcript.indexOf('about') > -1) {
-          topic = final_transcript.split('about ').pop();
-          getArticles(topic);
-        } else {
-          // learn about the user (AI) and get related content
-          $.getJSON( "topics/", function(data) {
-            if (data.result.topics) {
-              console.log(data);
-              topic = data.result.topics;
-              speak('Based on your social media posts, i can see that you are interested in: ' + topic);
-              sleep(1800);
-              getArticles(topic);
-            } else {
-              speak('sorry. i could not find any topics');
-            }
-          });
-        }
-      } else if (final_transcript.indexOf('next') > -1) {
-        nextCard();
-      } else if (final_transcript.indexOf('box') > -1) {
-        speak('OK');
-        console.log(currentCardIndex);
-        var currentCard = cards[currentCardIndex - 1];
-        sendToComposeBox();
-        hsp.composeMessage(currentCard.title + " " + currentCard.url, { shortenLinks: true });
-        speak('I just put the article in the compose box for you');
-      } else {
-        speak('Sorry, I do not understand what you are saying');
-      }
-      hideOwl();
-    }
-    recognition.onerror = function(event) {
-      console.log('error during speech recognition!');
-    }
-    recognition.onend = function() {
-      console.log('finished speech recognition');
-    }
-  }
-
-  // set up speech speechSynthesis
-  if (!('SpeechSynthesisUtterance' in window)) {
-    console.log('NO SUPPORT FOR SPEECH SYNTH!');
-  } else {
-    voiceMessage = new SpeechSynthesisUtterance();
-  }
-
-  // listen and speak functions
-  var listen = function () {
-    if (recognition) {
-      recognition.start();
-    }
-  }
-  var speak = function (msg) {
-    if (voiceMessage) {
-      voiceMessage.text = msg
-      window.speechSynthesis.speak(voiceMessage);
-    }
-  }
-
-  // helper functions
-  var updateCards = function(articles) {
-    articles = articles.filter(function(article) {
-      return article.image !== null;
-    })
-    speak('Here you go');
-    cards = articles;
-    $("#msg1").text(articles[0].title);
-    $("#msg2").text(articles[1].title);
-    $("#msg3").text(articles[2].title);
-    $("#msg4").text(articles[3].title);
-    $("#pic1").html("<img height='100%' width='100%' src='" + articles[0].image + "'>")
-    $("#pic2").html("<img height='100%' width='100%' src='" + articles[1].image + "'>")
-    $("#pic3").html("<img height='100%' width='100%' src='" + articles[2].image + "'>")
-    $("#pic4").html("<img height='100%' width='100%' src='" + articles[3].image + "'>")
-    $(".cardholder").show();
-  }
-  var nextCard = function() {
-    $(".card").stop(true, false).animate({ left: "-=387px", } );
-    currentCardIndex = currentCardIndex + 1;
-  }
-  var sleep = function(miliseconds) {
-     var currentTime = new Date().getTime();
-     while (currentTime + miliseconds >= new Date().getTime()) {}
-  }
-  var hideOwl = function() {
-    $(".owllisten").removeClass("popup");
-    $("body").removeClass("dark");
-  }
-  var sendToComposeBox = function() {
-    $(".card").stop(true, false).animate({ top: "-=400px", opacity: "0"} );
-    $(".superholder").addClass("supersuccess");
-  }
-  var getArticles = function(topic) {
-    $.getJSON( "articles/?topics=" + topic, function(data) {
-      if (data.result.articles) {
-        console.log(data);
-        updateCards(data.result.articles);
-      } else {
-        console.log('error. retrying!');
-        $.getJSON( "articles/?topics=" + topic, function(data) {
-          if (data.result.articles) {
-            console.log(data);
-            updateCards(data.result.articles);
-          } else {
-            console.log('error. retrying again!');
-            $.getJSON( "articles/?topics=" + topic, function(data) {
-              if (data.result.articles) {
-                console.log(data);
-                updateCards(data.result.articles);
-              } else {
-                console.log('no data. possibly an error!');
-                console.log(data);
-                speak('I am afraid something went wrong. Please try again');
-              }
-            });
-          }
-        });
-      }
-    });
-  }
-
-  speak('hello. what can i do for you?');
-
   </script>
-</div>
 {% endblock %}
