--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -23,7 +23,7 @@
             } else {
               console.log('no replies!');
               console.log(data);
-              $('#reply').val('');
+              $('#reply').val('---no reply---');
             }
           });
       });
